2004-10-27  Marek Safar  <marek.safar@seznam.cz>

	Fix #62358, implemented security attribute encoding.

	* attribute.cs (Attribute.CheckSecurityActionValididy): New method.
	Tests permitted SecurityAction for assembly or other types.
	(Assembly.ExtractSecurityPermissionSet): New method. Transforms
	data from SecurityPermissionAttribute to PermisionSet class.

	* class.cs (ApplyAttributeBuilder): Added special handling
	for System.Security.Permissions.SecurityAttribute based types.

	* codegen.cs (AssemblyClass.ApplyAttributeBuilder): Added
	special handling for System.Security.Permissions.SecurityAttribute
	based types.

	* enum.cs (ApplyAttributeBuilder): Added special handling
	for System.Security.Permissions.SecurityAttribute based types.

	* parameter.cs (ApplyAttributeBuilder): Added special handling
	for System.Security.Permissions.SecurityAttribute based types.

	* rootcontext.cs: Next 2 core types.

	* typemanager.cs (TypeManager.security_permission_attr_type):
	Built in type for the SecurityPermission Attribute.
	(code_access_permission_type): Build in type.

2004-10-17  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (LocalVariableReference.DoResolveBase, Emit):
	Remove the tests for `ec.RemapToProxy' from here, and encapsulate
	all of this information into
	EmitContext.EmitCapturedVariableInstance.
	
	* codegen.cs (EmitCapturedVariableInstance): move here the
	funcionality of emitting an ldarg.0 in the presence of a
	remapping.   This centralizes the instance emit code.

	(EmitContext.EmitThis): If the ScopeInfo contains a THIS field,
	then emit a load of this: it means that we have reached the
	topmost ScopeInfo: the one that contains the pointer to the
	instance of the class hosting the anonymous method.

	* anonymous.cs (AddField, HaveCapturedFields): Propagate field
	captures to the topmost CaptureContext.

2004-10-12  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (LocalVariableReference): Move the knowledge about